<resources>
    <string name="app_name">Notes</string>
    <string name="note_title">Название заметки</string>
    <string name="note_description">Содержание заметки</string>
    <string name="highest_priority">1</string>
    <string name="middle_priority">2</string>
    <string name="minimal_priority">3</string>
    <string name="save_new_note">Сохранить заметку</string>
    <string name="date_of_create">Создано:</string>
    <string name="dateOfCompletion">Срок выполнения</string>
    <string name="dateOfCompletionTitle">Выполнить:</string>
    <string name="date_of_completion">Срок исполнения заметки</string>
    <string name="Cancel">Отмена</string>
    <string name="Delrte_button">Удалить</string>


    <string-array name="days_of_week">
        <item>"Понедельник"</item>
        <item>"Вторник"</item>
        <item>"Среда"</item>
        <item>"Четверг"</item>
        <item>"Пятница"</item>
        <item>"Суббота"</item>
        <item>"Воскресенье"</item>
    </string-array>
</resources>